# Rn4871_Standalone

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
lib/: CMakeLists.txt
scripts/: client_ble.py
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_main.c
