cmake_minimum_required(VERSION 3.20)
project(RN4871_Standalone)

set(CMAKE_C_STANDARD 99)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(LOGS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/logs)

if(CMAKE_BUILD_TYPE STREQUAL Debug)
	include_directories(lib/rn4871-driver)
	add_subdirectory(lib/rn4871-driver)
	add_subdirectory(src)
elseif(CMAKE_BUILD_TYPE STREQUAL Release)
	include_directories(lib/rn4871-driver)
	add_subdirectory(lib/rn4871-driver)
	add_subdirectory(src)
elseif(CMAKE_BUILD_TYPE STREQUAL Test)
	set(RN4871_UTEST TRUE)
	include_directories(lib/rn4871-driver)
	add_subdirectory(lib/rn4871-driver)
else()
	message(ERROR " Specify CMAKE_BUILD_TYPE as Debug, Test or Release")
endif()
